src/tests/snapshots/scl__tests__parse_stmt@let.scl.snap
---
source: src/tests/mod.rs
expression: expr
input_file: src/tests/sources/parse_stmt/let.scl
---
Stmt {
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 11,
    },
    kind: VariableDeclaration {
        name: Ident {
            name: "a",
            span: SourceSpan {
                offset: SourceOffset(
                    4,
                ),
                length: 1,
            },
        },
        value: Expr {
            span: SourceSpan {
                offset: SourceOffset(
                    8,
                ),
                length: 2,
            },
            kind: Number(
                "58",
            ),
        },
    },
}
