src/tests/snapshots/scl__tests__runtime@address_of.scl-3.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/runtime/address_of.scl
---
1
