src/tests/snapshots/scl__tests__runtime@address_of.scl-4.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/address_of.scl
---

