src/tests/snapshots/scl__tests__runtime@address_of.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/address_of.scl
---
exit status: 2
