src/tests/snapshots/scl__tests__runtime@arrays.scl-2.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/runtime/arrays.scl
---
b = 2
a[1] = 123
b = 2
