src/tests/snapshots/scl__tests__runtime@arrays.scl-3.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/arrays.scl
---

