src/tests/snapshots/scl__tests__runtime@arrays.scl-4.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/arrays.scl
---
exit status: 0
