src/tests/snapshots/scl__tests__runtime@assignment.scl-4.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/assignment.scl
---

