src/tests/snapshots/scl__tests__runtime@assignment.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/assignment.scl
---
exit status: 20
