src/tests/snapshots/scl__tests__runtime@assignment_via_pointer.scl-3.snap
---
source: src/tests/mod.rs
expression: stderr
input_file: src/tests/sources/runtime/assignment_via_pointer.scl
---

