src/tests/snapshots/scl__tests__runtime@assignment_via_pointer.scl-4.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/assignment_via_pointer.scl
---
exit status: 0
